--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -190,7 +190,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/special_gothic_medium"
-                android:text="Total"
+                android:text="@string/total"
                 android:layout_marginEnd="24dp"
                 android:textAllCaps="true"
                 android:textColor="@color/grey"
