--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -211,6 +211,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/appearance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp">
