--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -154,6 +154,7 @@
             android:textSize="16sp" />
 
         <LinearLayout
+            android:id="@+id/account_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp">
